better style the office, removed warnings twitter,

--- a/_posts/2021-05-30-Twitter.md
+++ b/_posts/2021-05-30-Twitter.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "WIP HERE Twitter Sentiment Analysis"
+title: "Twitter Sentiment Analysis"
 subtitle: "Sentiment Analysis classification task performed over a million tweets"
 #date:
 background: '/img/posts/twitter_SA/twitter_SA.jpg'
@@ -1579,17 +1579,6 @@ for param_name in sorted(parameters_log.keys()):
     	log__C: 1.0
     	log__penalty: 'l2'
     	vect__ngram_range: (1, 2)
-    
-
-    C:\Users\rened\Anaconda3\lib\site-packages\sklearn\linear_model\_logistic.py:765: ConvergenceWarning: lbfgs failed to converge (status=1):
-    STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.
-    
-    Increase the number of iterations (max_iter) or scale the data as shown in:
-        https://scikit-learn.org/stable/modules/preprocessing.html
-    Please also refer to the documentation for alternative solver options:
-        https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression
-      extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)
-    
 
 Using the logistic regression model, we achieve a score of 78.6%, almost a 1% less than SVM on the sample size. Logistic classification is a quite accurate method.
 
@@ -1722,9 +1711,6 @@ print('Test accuracy:', acc)
     Test score: 0.17206811904907227
     Test accuracy: 0.8091718554496765
     Generating test predictions...
-    WARNING:tensorflow:From <ipython-input-37-75d41c68389e>:22: Sequential.predict_classes (from tensorflow.python.keras.engine.sequential) is deprecated and will be removed after 2021-01-01.
-    Instructions for updating:
-    Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype("int32")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).
     
 
 This 80.92% prediction score reflects the accuracy taking 320 000 observations into fitting. Another one using the whole dataset went to 83% on kaggle.
@@ -2174,19 +2160,6 @@ tokenizer = BertTokenizer.from_pretrained(
     do_lower_case = True
 ) #uncased for all lowercase data
 ```
-
-
-    Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]
-
-
-
-    Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]
-
-
-
-    Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]
-
-
 
 ```python
 encoded_data_train = tokenizer.batch_encode_plus(
