sales insights mostly done, added skills, css, us

--- a/_posts/2021-05-30-Twitter.md
+++ b/_posts/2021-05-30-Twitter.md
@@ -3,6 +3,7 @@ layout: post
 title: "Twitter Sentiment Analysis"
 subtitle: "Sentiment Analysis classification task performed over a million tweets"
 #date:
+skills: "[ML] [NLP] [Sentiment Analysis]"
 background: '/img/posts/twitter_SA/twitter_SA.jpg'
 link: 'https://github.com/ReneDCDSL/Twitter_Sentiment_Analysis'
 ---
@@ -69,7 +70,6 @@ link: 'https://github.com/ReneDCDSL/Twitter_Sentiment_Analysis'
 
   /* Style for links */
   a {
-      color: #007acc;
       text-decoration: none;
   }
 
@@ -77,10 +77,6 @@ link: 'https://github.com/ReneDCDSL/Twitter_Sentiment_Analysis'
       text-decoration: underline;
   }
 </style>
-
-by [De CHAMPS René](https://www.linkedin.com/in/rené-de-champs-2679bb269/) & [MAULET Grégory](https://www.linkedin.com/in/gregory-maulet-4a1879140/)
-
-<br>
 
 # I. Introduction: Description of the data set, imports, notebook structure
 
@@ -1769,7 +1765,7 @@ This project represents our final class work in this Machine Learning course. We
 
  <br>
 
-# VI. Appendix
+by [De CHAMPS René](https://www.linkedin.com/in/rené-de-champs-2679bb269/) & [MAULET Grégory](https://www.linkedin.com/in/gregory-maulet-4a1879140/)
 
 <br>
 
