--- a/_posts/2022-05-30-Twitter.md
+++ b/_posts/2022-05-30-Twitter.md
@@ -4,7 +4,7 @@ title: "Twitter Sentiment Analysis"
 subtitle: "Sentiment Analysis classification task performed over a million tweets"
 #date:
 skills: "[ML] [NLP] [Sentiment Analysis]"
-background: '/img/posts/twitter_SA/twitter_SA.jpg'
+background: '/img/posts/twitter_SA/bg_twitter.jfif'
 link: 'https://github.com/ReneDCDSL/Twitter_Sentiment_Analysis'
 ---
 <style>
@@ -84,13 +84,13 @@ link: 'https://github.com/ReneDCDSL/Twitter_Sentiment_Analysis'
 
 ### Description of the dataset
 
-In this analysis, we're looking at a dataset containing tweets : short message posted by users on www.twitter.com. We're aiming at modelling and predicting the sentiment, whether positive or negative, of each tweet. The sentiment of the tweet was based on whether each tweet contained a happy ":)" or sad ":(" smiley. These smileys have been removed from the tweets beforehand.
+In this analysis, we're looking at a dataset containing tweets : short messages posted by users on www.twitter.com. We're aiming at modelling and predicting the sentiment, whether positive or negative, of each tweet. The sentiment of the tweet was based on whether each tweet contained a happy ":)" or sad ":(" smiley. These smileys have been removed from the tweets beforehand.
 
 <br>
 
 ### Notebook structure
 
-We'll proceed in this analysis by making a first exploratory data analysis in which we'll take an overall look at our data to get a first intuition on how to approach the modelling. Then, we'll apply different modelling approach and try to compare them using predictive scoring. Finally, after tuning up our best model to get the best possible training fit, we'll apply our model on the test dataset which will serve as our final prediction result. Furthermore, we added an appendix at the end containing a long and perious attempt on using BERT model.
+We'll proceed in this analysis by making a first exploratory data analysis in which we'll take an overall look at our data to get a first intuition on how to approach the modelling. Then, we'll apply different modelling approach and try to compare them using predictive scoring. Finally, after tuning up our best model to get the best possible training fit, we'll apply our model on the test dataset which will serve as our final prediction result. Furthermore, we added an appendix at the end containing a long and perilous attempt on using BERT model.
 
 <br>
 
@@ -259,7 +259,7 @@ print("Instances of NO_QUERY in column 'lyx_query':", found.count())
     Instances of NO_QUERY in column 'lyx_query': 1280000
     
 
-Our dataset doesn't contain any missing values. Morevover, we observe that the column 'lyx_query' is full of the same statement 'NO_QUERY'. Thus, this variable is of no use in the predictive aim of our model since it doesn't make any discrimination between any tweet.
+Our dataset doesn't contain any missing values. Moreover, we observe that the column 'lyx_query' is full of the same statement 'NO_QUERY'. Thus, this variable is of no use in the predictive aim of our model since it doesn't make any discrimination between any tweet.
 
 
 ```python
@@ -828,8 +828,7 @@ print('Largest tweet length:', max_tweet)
 <br>
 
 ### Symbols
-Make text lowercase, remove text in square brackets,remove links,remove punctuation
-    and remove words containing numbers:
+Make text lowercase, remove text in square brackets, remove links, remove punctuation, and remove words containing numbers:
 
 
 ```python
@@ -939,7 +938,7 @@ emote.head()
  <br>
 
 ### Stopwords
-Remove stopwords (a list of not useful english words like 'the', 'at', etc.). It permits to reduce dimension of the data when tokenizing.
+Remove stopwords (a list of not useful english words like 'the', 'at', etc.). It allows us to reduce dimension of the data when tokenizing.
 
 
 ```python
@@ -1232,7 +1231,7 @@ We will extract the numerical features of our text content using a first tool th
 First, we make use of CountVectorizer. This method tokenizes strings of words by transforming them into tokens (using white spaces as token separators)
 
 
-Using CountVectorizer to tokenize and count the occurences of words in our text dataset.
+Using CountVectorizer to tokenize and count the occurrences of words in our text dataset.
 
 
 ```python
@@ -1298,7 +1297,7 @@ for param_name in sorted(parameters_log.keys()):
     {'log__C': (0.5, 0.75, 1.0),
      'log__penalty': ('l2',),
      'vect__ngram_range': ((1, 2), (1, 3))}
-    Fitting 5 folds for each of 6 candidates, totalling 30 fits
+    Fitting 5 folds for each of 6 candidates, totaling 30 fits
     done in 45.296s
     
     Best score: 0.760
@@ -1344,7 +1343,7 @@ for param_name in sorted(parameters_log.keys()):
     {'log__C': (0.5, 0.75, 1.0),
      'log__penalty': ('l2',),
      'vect__ngram_range': ((1, 2), (1, 3))}
-    Fitting 5 folds for each of 6 candidates, totalling 30 fits
+    Fitting 5 folds for each of 6 candidates, totaling 30 fits
     done in 68.993s
     
     Best score: 0.777
@@ -1356,7 +1355,7 @@ for param_name in sorted(parameters_log.keys()):
 
 We achieved a prediction score of 77.7% with 50 000 observations using logistic regression on unprocessed data. We observe that the preprocess is actually hurting our prediction accuracy.
 
-##### In this case, we fitted the same models once without any kind of preprocess and a second time using various preprocess methods. Selecting each of these methods separately (not shown here) guided us in the same direction. We found no prepocess techniques worth adding in the aim of better prediction accuracy for this dataset.
+##### In this case, we fitted the same models once without any kind of preprocess and a second time using various preprocess methods. Selecting each of these methods separately (not shown here) guided us in the same direction. We found no preprocess techniques worth adding in the aim of better prediction accuracy for this dataset.
 
  <br>
 
@@ -1374,7 +1373,7 @@ pipeline_svm = Pipeline([
 ])
 ```
 
-Then, we make a small dictionnary containing all the parameters we want to test during our Cross-Validation. (We have already fitted dozens of models with even larger sets. In order not to make it run several hours, we've decided to crop this parameter set to its few main components).
+Then, we make a small dictionary containing all the parameters we want to test during our Cross-Validation. (We have already fitted dozens of models with even larger sets. In order not to make it run several hours, we've decided to crop this parameter set to its few main components).
 
 
 ```python
@@ -1420,7 +1419,7 @@ for param_name in sorted(parameters_svm.keys()):
      'svm__penalty': ('l2',),
      'vect__max_features': (None, 50000, 200000, 400000),
      'vect__ngram_range': ((1, 3),)}
-    Fitting 5 folds for each of 4 candidates, totalling 20 fits
+    Fitting 5 folds for each of 4 candidates, totaling 20 fits
     done in 875.074s
     
     Best score: 0.815
@@ -1460,7 +1459,7 @@ for param_name in sorted(parameters_svm.keys()):
     pipeline: ['vect', 'tfidf', 'svm']
     parameters:
     {'svm__C': (0.6, 0.7, 0.8), 'vect__ngram_range': ((1, 2), (1, 3))}
-    Fitting 5 folds for each of 6 candidates, totalling 30 fits
+    Fitting 5 folds for each of 6 candidates, totaling 30 fits
     done in 3555.632s
     
     Best score: 0.830
@@ -1502,7 +1501,7 @@ for param_name in sorted(parameters_svm.keys()):
     pipeline: ['vect', 'tfidf', 'svm']
     parameters:
     {'svm__C': (0.6, 0.7, 0.8), 'vect__ngram_range': ((1, 2), (1, 3))}
-    Fitting 5 folds for each of 6 candidates, totalling 30 fits
+    Fitting 5 folds for each of 6 candidates, totaling 30 fits
     done in 238.555s
     
     Best score: 0.794
@@ -1567,7 +1566,7 @@ for param_name in sorted(parameters_log.keys()):
     {'log__C': (0.5, 0.75, 1.0),
      'log__penalty': ('l2',),
      'vect__ngram_range': ((1, 2), (1, 3))}
-    Fitting 5 folds for each of 6 candidates, totalling 30 fits
+    Fitting 5 folds for each of 6 candidates, totaling 30 fits
     done in 292.206s
     
     Best score: 0.786
@@ -1635,7 +1634,7 @@ for param_name in sorted(parameters_mnb.keys()):
     {'mnb__alpha': (0.75, 1),
      'vect__max_df': (0.5,),
      'vect__ngram_range': ((1, 2), (1, 3))}
-    Fitting 5 folds for each of 4 candidates, totalling 20 fits
+    Fitting 5 folds for each of 4 candidates, totaling 20 fits
     done in 50.199s
     
     Best score: 0.778
